# qt-mcp

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  PROJECT_FILES.md  README.md  build_docs_index.py  conftest.py  debug_build.py  pyproject.toml  pytest.ini  requirements.txt  server.py  templates_game_framework.py  verify.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
docs/demo/: README.md
docs/demo/screenshots/: README.md
docs_data/: README.md
examples/minimal/: .mcp.json  README.md  hello.pro  main.cpp
tests/: __init__.py
tests/full/: __init__.py  audit_test.py  e2e_creator_tools.py  e2e_fixes.py  e2e_new_tools.py  e2e_new_tools_v10.py  e2e_new_tools_v11.py  e2e_new_tools_v12.py  e2e_new_tools_v13.py  e2e_new_tools_v14.py  e2e_new_tools_v15.py  e2e_new_tools_v16.py  e2e_new_tools_v17.py  e2e_new_tools_v18.py  e2e_new_tools_v19.py  e2e_new_tools_v2.py  e2e_new_tools_v20.py  e2e_new_tools_v21.py  e2e_new_tools_v22.py  e2e_new_tools_v23.py  e2e_new_tools_v24.py  e2e_new_tools_v25.py  e2e_new_tools_v26.py  e2e_new_tools_v27.py  e2e_new_tools_v28.py  e2e_new_tools_v29.py  e2e_new_tools_v3.py  e2e_new_tools_v30.py  e2e_new_tools_v31.py  e2e_new_tools_v4.py  e2e_new_tools_v5.py  e2e_new_tools_v7.py  e2e_new_tools_v8.py  e2e_new_tools_v9.py  e2e_structured_diagnostics.py  e2e_test.py
tests/light/: __init__.py  e2e_gf.py  e2e_new_tools_v6.py
